--- a/src/main/webapp/view/css/mainPage.css
+++ b/src/main/webapp/view/css/mainPage.css
@@ -1,14 +1,12 @@
 #top-header {
-    /*background: linear-gradient(#195600 0%, #417e14 10%, #559200 50%, #7dba00 100%);*/
-    background-color: #bababa;
+    background: linear-gradient(#195600 0%, #417e14 10%, #559200 50%, #7dba00 100%);
     height: 60px;
     padding-top: 5px;
 }
 #main-navbar {
-    /*border-top: 2px solid #2c5c11;*/
-    /*border-bottom: 2px solid #2c5c11;*/
+    border-top: 2px solid #2c5c11;
+    border-bottom: 2px solid #2c5c11;
     border-radius: 0px;
-    background-color: #454242;
 }
 .navbar-nav {
     font-weight: bold;
