--- a/src/main/webapp/view/html/mainPage.html
+++ b/src/main/webapp/view/html/mainPage.html
@@ -17,7 +17,7 @@
     </div>
 
 
-    <nav class="navbar navbar-inverse" id="main-navbar">
+    <nav class="navbar navbar-default" id="main-navbar">
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
