--- a/src/main/webapp/home.page/home-page.styles.css
+++ b/src/main/webapp/home.page/home-page.styles.css
@@ -27,17 +27,20 @@
 }
 #content-panel {
     border-radius: 0px;
-    position: fixed;
-    top: 130px;
-    left: 20px;
-    right: 20px;
-    bottom: 30px;
+    /*position: absolute;*/
+    /*top: 130px;*/
+    /*left: 20px;*/
+    /*right: 20px;*/
+    /*bottom: 30px;*/
+    min-height: 70%;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 50px;
 }
 #content-panel-heading {
     color: #2c5c11;
     border: none;
     text-align: center;
-    font-size: 16px;
 }
 footer {
     background-color: #0c4a00;
@@ -45,7 +48,7 @@ footer {
     height: 30px;
     padding-top: 4px;
     padding-left: 50px;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
@@ -53,4 +56,7 @@ footer {
 .search-group {
     height: 28px;
     margin-top: 3px;
+}
+body {
+    background-color: #eee;
 }
