--- a/src/main/webapp/sign.up/sign-up.styles.css
+++ b/src/main/webapp/sign.up/sign-up.styles.css
@@ -1,12 +1,102 @@
-*[role="form"] {
-    max-width: 530px;
+#sign-up-form {
+    max-width: 600px;
     padding: 15px;
     margin: 0 auto;
     background-color: #fff;
     border-radius: 0.3em;
 }
+#sign-up .col-sm-9 {
+    max-width: 350px;
+}
+#sign-up .col-sm-3 {
+    min-width: 170px;
+}
+#sign-up .form-wrap {
+    width: 30%;
+    margin: 0 auto;
+}
+#sign-up h1 {
+    color: #1fa67b;
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+#sign-up .form-group {
+    margin-bottom: 20px;
+}
 
-*[role="form"] h2 {
-    margin-left: 5em;
-    margin-bottom: 1em;
+/*#sign-up .checkbox {
+    margin-bottom: 20px;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+#sign-up .checkbox.show:before {
+    content: '\e013';
+    color: #1fa67b;
+    font-size: 17px;
+    margin: 1px 0 0 3px;
+    position: absolute;
+    pointer-events: none;
+    font-family: 'Glyphicons Halflings';
+}
+#sign-up .checkbox .character-checkbox {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    vertical-align: middle;
+    display: inline-block;
+}
+#sign-up .checkbox .label {
+    color: #6d6d6d;
+    font-size: 13px;
+    font-weight: normal;
+}*/
+
+#sign-up .btn.btn-custom {
+    width: 330px;
+    height: 35px;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+#sign-up .form-control {
+    width: 330px;
+    color: #212121;
+}
+#sign-up .btn-custom {
+    color: #fff;
+    background-color: #1fa67b;
+}
+#sign-up.btn-custom:hover,
+#sign-up .btn-custom:focus {
+    color: #fff;
+}
+
+
+fieldset {
+    border: thin solid #ccc;
+    border-radius: 4px;
+    padding: 20px;
+    padding-left: 40px;
+    background: #fbfbfb;
+}
+legend {
+    color: #678;
+}
+.form-control {
+    width: 95%;
+}
+label small {
+    color: #678 !important;
+}
+span.req {
+    color:maroon;
+    font-size: 112%;
 }
