--- a/src/main/webapp/basket/basket.styles.css
+++ b/src/main/webapp/basket/basket.styles.css
@@ -1,6 +1,41 @@
-#body {
+.modal-body {
     padding: 20px;
 }
 #basketSize {
     font-size: 15px
+}
+#emptyCondition {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 30px;
+    color: gray;
+}
+#productBloc {
+
+}
+#productName {
+    vertical-align: top;
+    font-size: 15px;
+    font-weight: bold;
+    width: 400px;
+    height: 50px;
+    display: inline-block;
+    /*border: 1px solid;*/
+}
+#productPhoto {
+    width: 100px;
+    height: 100px;
+}
+hr {
+    border-color: #c7bfbf;
+}
+#detailContainer {
+    display: inline-table;
+    vertical-align: top;
+    margin-left: 10px;
+}
+#productPrice {
+    margin-top: 20px;
+    color: #989898;
 }
