order amount and proceed to checkout button in basket created

--- a/src/main/webapp/basket/basket.styles.css
+++ b/src/main/webapp/basket/basket.styles.css
@@ -49,6 +49,14 @@ hr {
     display: inline-flex;
     vertical-align: top;
 }
+#orderContainer {
+    text-align: right;
+}
+#orderAmount {
+    margin-left: 300px;
+    margin-top: 5px;
+    float: left;
+}
 
 
 
