--- a/src/main/webapp/catalog/categories/category.editor/category-editor.styles.css
+++ b/src/main/webapp/catalog/categories/category.editor/category-editor.styles.css
@@ -4,6 +4,7 @@
     height: 360px;
     width: 300px;
     padding: 0;
+    text-align: center;
 }
 .container {
     padding: 5px;
@@ -17,15 +18,6 @@
 #inner-container {
     padding: 5px;
 }
-.capital-row {
-    margin: 5px;
-    height: 40px;
-    font-weight: bold;
-    text-align: center;
-    color: #2c5c11;
-    font-size: 18px;
-    font-family: Castellar;
-}
 #panel-heading {
     text-align: center;
     color: #2c5c11;
@@ -33,7 +25,12 @@
     font-weight: bold;
     font-family: Cambria;
 }
-#createCategory {
-    float: right;
-    color: inherit;
+input#name {
+    width: 300px;
+}
+button#save{
+    width: 200px;
+}
+input#choosePhoto{
+    margin-top: 50%;
 }
