category deleting front end

--- a/src/main/webapp/catalog/categories/category.editor/category-editor.styles.css
+++ b/src/main/webapp/catalog/categories/category.editor/category-editor.styles.css
@@ -47,3 +47,7 @@ div#message-container {
     float: right;
     color: inherit;
 }
+#add-category-button {
+    height: 24px;
+    padding-top: 1px;
+}
