--- a/src/main/webapp/catalog/categories/catalog-categories.styles.css
+++ b/src/main/webapp/catalog/categories/catalog-categories.styles.css
@@ -49,7 +49,9 @@
 #edit-button {
     margin-right: 15px;
 }
-#add-category-button {
+.category-actions-button {
     height: 24px;
     padding-top: 1px;
+    margin-left: 2px;
+    width: 103px;
 }
