--- a/src/main/webapp/catalog/categories/catalog-categories.styles.css
+++ b/src/main/webapp/catalog/categories/catalog-categories.styles.css
@@ -35,7 +35,7 @@
     font-family: Cambria;
     position: relative;
 }
-#create-category {
+#create-panel {
     color: inherit;
     position: absolute;
     right: 15px;
