--- a/src/main/webapp/catalog/products/catalog-products.styles.css
+++ b/src/main/webapp/catalog/products/catalog-products.styles.css
@@ -60,12 +60,13 @@ a.clickable-panel {
 #name-clickable-panel{
     color: inherit;
 }
-#add-product-button {
+.category-actions-button {
     height: 24px;
     padding-top: 1px;
+    margin-left: 2px;
     width: 103px;
 }
-#create-product {
+#create-panel {
     color: inherit;
     position: absolute;
     right: 15px;
