--- a/src/main/webapp/catalog/products/catalog-products.styles.css
+++ b/src/main/webapp/catalog/products/catalog-products.styles.css
@@ -17,6 +17,7 @@
     padding: 5px;
     height: 450px;
     width: 310px;
+    position: relative;
 }
 #photo {
     width: 298px;
@@ -70,4 +71,13 @@ a.clickable-panel {
     color: inherit;
     position: absolute;
     right: 15px;
+}
+#edit-container {
+    position: absolute;
+    margin: 6px;
+    right: 5px;
+    visibility: hidden;
+}
+#edit-button {
+    margin-right: 15px;
 }
