--- a/src/main/webapp/catalog/product.detail/product-detail.styles.css
+++ b/src/main/webapp/catalog/product.detail/product-detail.styles.css
@@ -4,6 +4,7 @@
     font-size: 18px;
     font-weight: bold;
     font-family: Cambria;
+    position: relative;
 }
 .panel-body {
     padding: 20px;
@@ -91,4 +92,15 @@ textarea#description {
 div#availability{
     margin-top: 30px;
     margin-left: 2px;
+}
+#create-product {
+    color: inherit;
+    position: absolute;
+    right: 15px;
+}
+.product-actions-button {
+    height: 24px;
+    padding-top: 1px;
+    margin-left: 2px;
+    width: 127px;
 }
