--- a/src/main/webapp/catalog/product.detail/product.editor/product-editor.styles.css
+++ b/src/main/webapp/catalog/product.detail/product.editor/product-editor.styles.css
@@ -4,6 +4,7 @@
     font-size: 18px;
     font-weight: bold;
     font-family: Cambria;
+    position: relative;
 }
 .panel-body {
     padding: 20px;
@@ -64,4 +65,25 @@ label {
 #save-button {
     width: 300px;
     margin-top: 30px;
+}
+#create-product {
+    color: inherit;
+    position: absolute;
+    right: 15px;
+}
+.product-actions-button {
+    height: 24px;
+    padding-top: 1px;
+    margin-left: 2px;
+    width: 127px;
+}
+a#to-review {
+    color: inherit;
+    position: absolute;
+    left: 15px;
+}
+button#to-review-button {
+    height: 24px;
+    padding-top: 1px;
+    margin-left: 2px;
 }
