error and success saving messages

--- a/src/main/webapp/catalog/product.detail/product.editor/product-editor.styles.css
+++ b/src/main/webapp/catalog/product.detail/product.editor/product-editor.styles.css
@@ -87,3 +87,13 @@ button#to-review-button {
     padding-top: 1px;
     margin-left: 2px;
 }
+div#message-container {
+    margin-top: 20px;
+    height: 25px;
+}
+#errorMessage {
+    color: red;
+}
+#successMessage {
+    color: green;
+}
