"basket" renamed to "shopping cart"

--- a/src/main/webapp/catalog/products/catalog-products.styles.css
+++ b/src/main/webapp/catalog/products/catalog-products.styles.css
@@ -53,6 +53,9 @@
 #buy-button {
     float: right;
     margin: 10px;
+    width: 120px;
+    outline: none;
+    box-shadow: none;
 }
 a.clickable-panel {
     text-decoration: none;
