--- a/src/main/webapp/home.page/home-page.styles.css
+++ b/src/main/webapp/home.page/home-page.styles.css
@@ -64,12 +64,12 @@ body {
     background-color: #eee;
 }
 #goods-quantity-bracket{
-    width: 110px;
+    width: 95px;
 }
 #user-functions-button-panel{
     width: 200px;
 }
-#a-basket {
+#a-cart {
     outline: none;
     box-shadow: none;
 }
