--- a/src/main/webapp/order/creation/order-creation.styles.css
+++ b/src/main/webapp/order/creation/order-creation.styles.css
@@ -1,70 +1,50 @@
-#login {
-    padding-top: 50px
+#order-form {
+    margin-top: 50px;
 }
-#login .form-wrap {
-    width: 30%;
-    margin: 0 auto;
-}
-#login h1 {
+#capital-row {
     color: #1fa67b;
     font-size: 18px;
-    text-align: center;
     font-weight: bold;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    margin-left: 10px;
 }
-#login .form-group {
-    margin-bottom: 25px;
-}
-#login .checkbox {
-    margin-bottom: 20px;
-    position: relative;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-}
-#login .checkbox.show:before {
-    content: '\e013';
-    color: #1fa67b;
-    font-size: 17px;
-    margin: 1px 0 0 3px;
-    position: absolute;
-    pointer-events: none;
-    font-family: 'Glyphicons Halflings';
-}
-#login .checkbox .character-checkbox {
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-    border-radius: 3px;
-    border: 1px solid #ccc;
-    vertical-align: middle;
-    display: inline-block;
-}
-#login .checkbox .label {
-    color: #6d6d6d;
+.form-group {
+    margin-top: 10px;
     font-size: 13px;
-    font-weight: normal;
 }
-#login .btn.btn-custom {
-    font-size: 14px;
-    margin-bottom: 20px;
+input#phone {
+    border-radius: 1px;
+    width: 250px;
+    height: 25px;
+    font-size: 13px;
+    outline: none;
+    box-shadow: none;
 }
-
-.form-control {
-    color: #212121;
+textarea#address {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 1px;
+    height: 80px;
+    width: 250px;
+    outline: none;
+    box-shadow: none;
 }
-.btn-custom {
-    color: #fff;
-    background-color: #1fa67b;
+.block-container {
+    width: 50%;
+    padding-top: 10px;
 }
-.btn-custom:hover,
-.btn-custom:focus {
-    color: #fff;
+select#pay-method {
+    margin-top: 30px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    border-radius: 1px;
+    width: 250px;
+    height: 25px;
+    font-size: 13px;
+    outline: none;
+    box-shadow: none;
 }
-div#errorMessage {
-    color: red;
-    text-align: center;
-    height: 20px;
+button#process-order {
+    margin-top: 20px;
+    width: 250px;
 }
