--- a/src/main/webapp/order/creation/order-creation.styles.css
+++ b/src/main/webapp/order/creation/order-creation.styles.css
@@ -48,3 +48,8 @@ button#process-order {
     margin-top: 20px;
     width: 250px;
 }
+div#errorMessage {
+    text-align: center;
+    margin-top: 10px;
+    color: red;
+}
