--- a/src/main/webapp/catalog/categories/catalog-categories.styles.css
+++ b/src/main/webapp/catalog/categories/catalog-categories.styles.css
@@ -62,3 +62,12 @@
 #open-csv-input {
     display: none;
 }
+#open-csv-button {
+    color: inherit;
+    position: absolute;
+    left: 15px;
+    top: 8px;
+    height: 24px;
+    padding-top: 1px;
+    margin-left: 2px;
+}
