--- a/src/main/webapp/order/order.view/order-view.styles.css
+++ b/src/main/webapp/order/order.view/order-view.styles.css
@@ -4,6 +4,7 @@
     font-size: 18px;
     font-weight: bold;
     font-family: Cambria;
+    position: relative;
 }
 #hr-heading {
     margin: 10px 0em 0em;
@@ -72,4 +73,13 @@ div.div-label{
 #delivery-container {
     margin-top: 20px;
     font-size: 14px
+}
+.save-button {
+    height: 24px;
+    padding-top: 1px;
+    margin-left: 2px;
+    width: 103px;
+    position: absolute;
+    right: 15px;
+    top: 10px;
 }
