--- a/src/main/webapp/history/history.styles.css
+++ b/src/main/webapp/history/history.styles.css
@@ -11,16 +11,6 @@
 #hr-heading {
     margin: 10px 0em 0em;
 }
-select#status-view-parameter {
-    height: 25px;
-    width: 150px;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    font-size: 13px;
-    position: absolute;
-    outline: none;
-    box-shadow: none;
-}
 #list-group-item {
     border-radius: 1px;
     height: 100px;
@@ -42,6 +32,14 @@ textarea#address {
     box-shadow: none;
     width: 100%;
     cursor: hand;
+}
+select#status {
+    height: 25px;
+    width: 150px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    margin-top: 10px;
+    font-size: 13px;
 }
 #delivery {
     outline: none;
