--- a/src/main/webapp/home.page/home-page.styles.css
+++ b/src/main/webapp/home.page/home-page.styles.css
@@ -47,6 +47,8 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
+    font-size: 12px;
+    padding-top: 8px;
 }
 #search-input {
     outline: none;
